--- a/index.html
+++ b/index.html
@@ -199,13 +199,14 @@
 
         #calculadora-hcode {
             margin: 0 auto;
-        } 
+        }
     </style>
 </head>
 
 <body>
 
     <div class="outer">
+      calc
         <div class="middle">
             <svg id="calculadora-hcode" version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="600px" height="600px" viewBox="0 0 600 600" enable-background="new 0 0 600 600"
