--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Calculadora sou a master to indo pra feature</title>
+    <title>Calculadora sou a master to indo pra feature eiiii</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         button,
